# WebBuilder

./: .gitignore  Readme.md  env.example  pyproject.toml
alembic/: env.py
alembic/versions/: 45147d80e617_initial_migration.py
app/: config.py  main.py
app/agents/: code_generator.py  menu_structurer.py  pdf_extractor.py  state.py  ui_designer.py  validator.py
app/api/: routes.py
app/graph/: __init__.py  workflow.py
app/models/: database.py  schemas.py
app/services/: db_service.py  pdf_service.py
